<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:context=".HomeActivity">

    <!-- start of the linear layout-->


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="357dp"
            android:layout_height="181dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText3" android:hint="@string/enter_user_name_here" android:autofillHints=""/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText4" android:hint="@string/password" android:autofillHints=""/>
        <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2"/>
    </LinearLayout> <!-- end of the linear layout-->

    <android.support.v7.widget.GridLayout
            android:layout_width="154dp"
            android:layout_height="123dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/gridLayout2">

        <!-- start of the image view -->

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/biceps_training"
                android:id="@+id/imageView" android:contentDescription="@string/biceps_todo"/>

        <!-- start of the grid layout-->

    </android.support.v7.widget.GridLayout>
    <android.support.v7.widget.GridLayout
            android:layout_width="154dp"
            android:layout_height="123dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/gridLayout">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/cardio_training"
                android:id="@+id/imageView2" android:contentDescription="@string/cardio_todo"/>
    </android.support.v7.widget.GridLayout>

    <!-- start of the grid layout-->

    <android.support.v7.widget.GridLayout
            android:layout_width="154dp"
            android:layout_height="123dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/gridLayout2">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/chest_training"
                android:id="@+id/imageView3" android:contentDescription="@string/chest_todo"/>
    </android.support.v7.widget.GridLayout>

    <!-- start of the grid layout-->

    <android.support.v7.widget.GridLayout
            android:layout_width="154dp"
            android:layout_height="123dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/core_training"
                android:id="@+id/imageView4" android:contentDescription="@string/core_todo"/>
    </android.support.v7.widget.GridLayout>

    <!-- start of the bottom navigation layout-->

    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/bottomNavigationView">
        <Button
                android:text="@string/home_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/home_button"/>
    </android.support.design.widget.BottomNavigationView>
    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp"
            app:layout_constraintStart_toEndOf="@+id/bottomNavigationView" android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bottomNavigationView2">
        <Button
                android:text="@string/about_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/about_button"/>
    </android.support.design.widget.BottomNavigationView>
    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/bottomNavigationView2"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0">
        <Button
                android:text="@string/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/sign_up_button"/>
    </android.support.design.widget.BottomNavigationView>
</android.support.constraint.ConstraintLayout> <!-- end of the constraint layout-->
