<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <!-- start of the edit text-->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText6"
            android:hint="@string/first_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:textSize="24sp"/>

    <!-- start of the edit text for the last name-->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText7"
            android:hint="@string/last_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:autofillHints="" android:textSize="24sp"/>

    <!-- start of the edit text -->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email" android:autofillHints=""
            android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText9" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/password" android:autofillHints=""
            android:textSize="24sp"/>

    <!-- start of the button-->

    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText10" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.193"
            app:layout_constraintHorizontal_bias="0.532" android:textSize="24sp"/>
    <android.support.design.widget.BottomNavigationView
            android:layout_width="170dp"
            android:layout_height="62dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/bottomNavigationView3"
            app:layout_constraintVertical_bias="1.0">
        <Button
                android:text="@string/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/home_buton"/>
    </android.support.design.widget.BottomNavigationView>
    <android.support.design.widget.BottomNavigationView
            android:layout_width="170dp"
            android:layout_height="62dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/bottomNavigationView3"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintVertical_bias="1.0">
        <Button
                android:text="@string/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/about_buton"/>
    </android.support.design.widget.BottomNavigationView>
</android.support.constraint.ConstraintLayout> <!-- end of the constraint layout-->
