<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/darker_gray">
    <!-- start of the grid layout-->

    <android.support.v7.widget.GridLayout
            android:layout_width="368dp"
            android:layout_height="135dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/gridLayout3">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/about_image"
                android:id="@+id/imageView6" android:contentDescription="@string/about_todo"/>
    </android.support.v7.widget.GridLayout>

    <!-- start of the textview -->

    <TextView
            android:text="@string/about_content"
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/design_default_color_primary" android:textSize="18sp"/>

    <!-- start of the bottomnavigation view-->

    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/bottomNavigationView">
        <Button
                android:text="@string/home_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/home_btn"/>
    </android.support.design.widget.BottomNavigationView>

    <!-- start of the bottom navigation layout-->

    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp"
            app:layout_constraintStart_toEndOf="@+id/bottomNavigationView" android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bottomNavigationView2">
        <Button
                android:text="@string/about_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/about_btn"/>
    </android.support.design.widget.BottomNavigationView>

    <!-- start of the nav bottom  layout-->

    <android.support.design.widget.BottomNavigationView
            android:layout_width="108dp"
            android:layout_height="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/bottomNavigationView2"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0">

        <!-- start of the button -->

        <Button
                android:text="@string/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/sign_up_btn"/>
    </android.support.design.widget.BottomNavigationView>
</android.support.constraint.ConstraintLayout> <!-- end of the constraint layout-->
